frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    enviroment: prod
    app: frontend
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - args:
            - yarn
            - dev
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /signin
              port: 80
              # httpHeaders:
              #   - name: Accept
              #     value: "*/*"
            initialDelaySeconds: 60
            periodSeconds: 200
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 20
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /signin     
              port: 80
            periodSeconds: 200
            initialDelaySeconds: 60
            #periodSeconds: 20
            timeoutSeconds: 60
          image: us-central1-docker.pkg.dev/emprestame/docker-repo/frontend-prod-image
          name: frontend
          ports:
            - name: frontend
              containerPort: 80
          resources: {}
      restartPolicy: Always
