ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: frontend-ip
    kubernetes.io/ingress.class: "gce"
  labels:
    app: frontend
spec:
  defaultBackend:
    service:
      name: frontend-load-balancer
      port:
        number: 80
